test/compile_errors/lib/implicit_main/bad_import.w
print("side effect on import")
